# openenv-support-env

./: .dockerignore  .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  push_to_hf.py  pyproject.toml  requirements.txt
.hypothesis/constants/: 006b559781a41f7f  010258c38047fd64  0104e49ae3e6d53d  016af87f794a90e9  0180d0179b1e0750  01c067336e9c0e8e  01e17e88cee170ff  020bd4b9cc3144b7  022d71bfc30b1c15  0333f17f4dab2227  03d7073072acca7b  041b82baf95116f0  044aa4a97dd3204b  048a56e2a2a5a973  04b65362bc7d8bfc  04f35b37c9d86ca9  055c6411036374f4  0570a7c52cd987f9  0580a821c7d7efd6  0588a2471da78b21  05e0a16f6f6c2097  0628f2618034526e  066ae03600823d8b  071b0f49e3961777  0736e2d4acddd01a  07475514dc0bbadb  07621c8b1c7435e0  07b64756f7c26c32  07b8446a052edf99  07cd85f2ed5e4687  0863bc6306419568  08ae6065f7208bab  08ea50eb4622dee7  09482feeaa124f43  096f28b487c49598  09ae28b390a241d0  09c940a775c04b02  09d1cc02624f5ab7  09d768fa4c9c7896  09e30fcf1a653c6f  (+1050 more)
.hypothesis/tmp/: tmp2m7e93eu  tmp4xi3cgsl  tmp941tcnol  tmp_mw5gg7p  tmp_wk2h2b_  tmpc1ifdqt8  tmpjjujh1_x  tmpkl97xwwa  tmptdypmxim  tmpykbbofk0
server/: app.py
src/envs/support_env/: __init__.py  client.py  environment.py  grader.py  models.py  (+1 more)
tests/integration/: test_baseline_integration.py  test_end_to_end.py  test_http_api.py
tests/property/: test_environment_properties.py  test_grading_properties.py
tests/unit/: __init__.py  test_baseline.py  test_client.py  test_environment.py  test_grader.py  test_models.py  test_tickets.py
tests/validation/: test_docker_build.py  test_openenv_compliance.py
