[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "customer-support-triage-env"
version = "1.0.0"
description = "OpenEnv: Customer Support Triage Environment"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Arnav Deepak Tiwari"}
]
keywords = ["openenv", "reinforcement-learning", "customer-support", "nlp"]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.1",
    "openai>=1.25.0",
    "httpx>=0.27.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
support-env-server = "server.app:main"
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["src"]
